# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Jan 28 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- The dumping of table definitions from JdbcClient program has been
  improved. It now includes the ON UPDATE and ON DELETE rules for foreign
  key constraints. Also it no longer generates CREATE INDEX statements
  for foreign key constraints whose name is not system generated but
  user specified.

* Thu Jan 14 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved DatabaseMetaData.getTypeInfo() output for temporal data
  types: sec_interval, day_interval, month_interval, date, time, timetz,
  timestamp and timestamptz.

* Wed Jan  6 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected output of resultset columns UPDATE_RULE and DELETE_RULE
  when calling DatabaseMetaData API methods getImportedKeys() or
  getExportedKeys() or getCrossReference(). These columns used to
  always return DatabaseMetaData.importedKeyNoAction but now they
  can also report the other values when set:
     DatabaseMetaData.importedKeyCascade
  or DatabaseMetaData.importedKeyRestrict
  or DatabaseMetaData.importedKeySetNull
  or DatabaseMetaData.importedKeySetDefault.

* Thu Nov 12 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Moved Java classes from packages starting with nl.cwi.monetdb.*
  to package org.monetdb.* This naming complies to the Java Package
  Naming convention as MonetDB's main website is www.monetdb.org.
  To prevent problems with existing Java programs and JDBC driver
  configurations we still support usage of the following classes:
   nl.cwi.monetdb.jdbc.MonetDriver
   nl.cwi.monetdb.jdbc.types.INET
   nl.cwi.monetdb.jdbc.types.URL
   nl.cwi.monetdb.mcl.net.MapiSocket
   nl.cwi.monetdb.client.JdbcClient
  They are implemented as simple wrappers of their org.monetdb.* equivalents.
  Note: These nl.cwi.monetdb.* classes are now marked as deprecated and may